src/main.css
/* ... */
.slider.round:before {
    border-radius: 50%;
}

.forget-password-link {
    margin: 0 auto;
    font-family: 'Outfit', sans-serif;
    font-style: normal;
    font-weight: 400;
    font-size: 14px;
    text-align: right;
    color: #ABA1B3;
}

.remember-me-label {
    font-family: 'Outfit', sans-serif;
    font-weight: 400;
    font-size: 14px;
    color: #9D9D9D;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 8px;
}

.reset-password-label {
    font-family: 'Outfit', sans-serif;
    font-weight: 400;
    font-size: 14px;
    color: #9D9D9D;
    display: flex;
    align-items: center;
    gap: 8px;
}

[lang~="ar"] .custom-rtl-item {
    text-align: right;
}

#input-error-username,
#input-error,
#input-error-password-confirm,
#input-error-password {
    color: #F04438;
}

.pf-c-form-control[aria-invalid=true] {
    border-bottom: #F04438 solid 2px !important;
}

textarea:focus,
input:focus {
    outline: none;
}

.pf-c-form-control:focus {
    border-bottom: #2B6CB1 solid 2px !important;
}

#password-new,
#password-confirm {
    width: 100%;
}

.instruction {
    text-align: center;
}

html[lang~="ar"] .kcFormGroupClass,
html[lang~="ar"] #password {
    text-align: right !important;

}

html[lang~="ar"] .kcLabelWrapperClass,
html[lang~="ar"] .kcInputGroup {
    display: flex;
    flex-direction: row-reverse;

}

html[lang~="ar"] .pf-c-form-control[aria-invalid=true] {
    background-position: left center !important;

}

html[lang~="ar"] #kc-registration span {
    display: flex;
    flex-direction: row-reverse;
    gap: 8px;
    justify-content: center;
}

html[lang~="ar"] div[data-kc-msg="doClickHere"] {
    margin-left: 4px;
}


.kcLabelWrapperClass {
    color: #F04438;
}

.kcLabelWrapperClass div {
    color: #1E1129 !important;
}

.subtitle {
    display: none;
}

#instruction1 {
    font-size: 0;
}

#instruction1 * {
    font-size: 16px;
}

html[lang~="ar"] .form-vertical {
    text-align: right;
}

html[lang~="ar"] .form-vertical ul {
    list-style: none !important;
}

html[lang~="ar"] #kc-info-message {
    text-align: right;
}

html[lang~="ar"] .pf-c-form-control[aria-invalid=true] {
    padding-right: 0 !important;
    padding-left: 2rem !important;
    text-align: right !important;
    direction: rtl;
}

html[lang~="ar"] .pf-c-form-control {
    text-align: right !important;
    direction: rtl;
}



.switch-container {
    display: flex;
    align-items: center;
}

.switch {
    position: relative;
    display: inline-block;
    width: 36px;
    height: 20px;
}

.switch input {
    opacity: 0;
    width: 0;
    height: 0;
}

.slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: #ccc;
    transition: .4s;
}

.slider:before {
    position: absolute;
    content: "";
    height: 16px;
    width: 16px;
    left: 2px;
    bottom: 2px;
    background-color: white;
    transition: 0.4s;
}

input:checked+.slider {
    background-color: #2196F3;
}


input:checked+.slider:before {
    transform: translateX(16px);
}

.slider.round {
    border-radius: 12px;
}

.slider.round:before {
    border-radius: 50%;
}

.switch-label {
    font-family: 'Outfit', sans-serif;
    font-weight: 400;
    font-size: 14px;
    color: #9D9D9D;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 8px;
    margin-left: 10px;
    cursor: pointer;
}

.brand-title {
    width: 100%;
    color: #225790;
    text-align: center;
    font-family: Almarai;
    font-size: 28px;
    font-style: normal;
    font-weight: 800;
    line-height: 40px;
}

